LIST OF CHANGES FOR NPG-QC PACKAGE
 
 - DBIx achema loader script: automatically add npg_qc::Schema::Composition
     role when generating result classes for autoqc tables
 - DBIx classes for autoqc db tables:
     remove 'create_component' factory method which was only needed
      for back-filling composition foreign key;
     inherit 'composition' attribute from a newly created
      npg_qc::Schema::Composition role;
     document 'composition' attribute
 - composition-enabled manual qc:
     db tables linked to the seq_composition table
     search proceeds via releated composition tables
     when mqc outcomes are saved, a composition is created if it does not exist
     'composition' attribute is added to mqc entity result classes

release 64.1
 - SeqQC viewer - function to draw readonly representation of the
   utility flag
 - autoqc checks parect object - refactore to use a new factory for
   rpt list to composition transformation
 - upstream_tags modified so it can work with the rpt_list argument
 - constraints in autoqc db tables are reset to allow for saving
   results for multi-component compositions
 - tag_sniff modified to load the whole tag table upfront
     revcomp matches now output in reverse video

release 64.0
 - composition-enabled autoqc objects storage
     schema changes
     DBIx binding updates
     script for back-filling foreign keys to composition table
 - bug fix on search_autoqc method
 - db composition creation via a factory method
 - db autoqc loader - unused 'update' option removed
 - db autoqc loader - will retry a transaction that failed because
     a db lock could not be aquired
 - saving a component with subset attribute value 'all' gives an error
 - npg_qc::autoqc::results::collection
     remove unused functionality;
     ensure existing methods work with objects that do not have id_run,
     position, etc
 - remove superfluous method call from a template
 - db query for tag_index NULL or NOT NULL: undef as a string